# calorie-tracker

./: README.md
client/: package.json
client/public/: index.html  manifest.json
client/src/: index.tsx  main.scss
client/src/model/: ingredient.ts  recipe.ts
client/src/pages/: create-ingredient.tsx  create-recipe.tsx  ingredients.tsx  recipes.tsx
client/src/state/: create-group-ingredient-state.tsx  create-ingredient-state.tsx
client/src/utils/: strings.ts  useAutoSavingState.ts
server/: .env  Cargo.toml  Rocket.toml  sqlx-data.json
server/migrations/: 20211005101239_ingredients.sql  20211009000216_ingredient_groups.sql  20211009022623_recipes.sql
server/src/: coles.rs  errors.rs  ingredients.rs  main.rs  recipes.rs
server/src/entities/: ingredient_group_ingredient_row.rs  ingredient_group_row.rs  ingredient_row.rs  mod.rs  recipe_ingredient_group_row.rs  recipe_ingredient_row.rs  recipe_row.rs
server/src/models/: ingredient.rs  mod.rs  recipe.rs
