[package]
name = "health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
indoc = "1.0"
lazy_static = "1.4"
multimap = "0.8.3"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls", "json" ] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rust_decimal = "1.8"
rust_decimal_macros = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
simple-error = "0.2.3"
sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "postgres", "macros", "decimal", "chrono", "offline"] }
